fix some width issues
- there was a margin that always made the horisontal scrollbar appear
- footer wasn't wide enough.

--- a/site/css/popup.css
+++ b/site/css/popup.css
@@ -347,6 +347,10 @@
 }
 .navbar {min-height:48px !important;}
 
+.navbar .navbar-right {
+     margin: 0px;
+}
+
 
 
 /* Sticky footer styles
@@ -783,4 +787,11 @@ top: 17px;
 .listtablekid:hover {
      cursor: pointer;
      color: #A06;
+}
+
+
+/* Bootstrap fixups */
+.container-fluid .row {
+    margin-left: 0px;
+    margin-right: 0px;
 }
